css/emaillist.css
.sender-div{
    width: 200px !important;
        margin-left: 7px;
            margin-right: 7px;

}
.check-star-flag{
    color:#999999;
}
.preview-bar{
    width:100% !important;
    border-bottom:0.5px solid #bbbbbb !important;
    display: flex !important;
    justify-content: space-between !important;
    transform: scaleY(1.00);
    transition: transform 0.3s ease-in-out;

}
.preview-bar:hover {
    transform: scaleY(1.03);
    box-shadow: 5px 5px 10px rgba(111, 111, 111, 0.5);
}
.central-div{
    width: 100%;
            box-shadow: none;
}

.preview-time{
display:flex !important;
justify-content: flex-end!important;
    margin-left: 7px;
        margin-right: 7px;
        /* align-self: flex-end; */
}
.left-div{
    display: flex;
}
.right-div{
        display: flex;

}
.list-check-box{
    margin-left: 15px;
    margin-right: 7px;
}
.list-star{
        margin-left: 7px;
        margin-right: 7px;
}
.list-important{
    margin-left: 7px;
    margin-right: 7px;
}
.preview{
    display: flex;
}
.previewTitle{
        white-space: nowrap;
            /* Prevents text from wrapping to the next line */
            /* overflow: hidden; */
            /* Hides any overflow */
            /* text-overflow: ellipsis; */
            /* Adds ellipsis (...) for overflow */
            /* width: 10vw; */

        margin-left: 7px;
            margin-right: 7px;
}
.previewText{
    white-space: nowrap;
        /* Prevents text from wrapping to the next line */
        overflow: hidden;
        /* Hides any overflow */
        text-overflow: ellipsis;
        /* Adds ellipsis (...) for overflow */
        width: 30vw;    
        margin-left: 7px;
        margin-right: 7px;
}

/* class to make something bold */
.bold-text{
    font-weight: 700;
}

#main-list-header{
    background-color: white;
    z-index: 2;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

#main-list-content{
    padding-top: 60px;
    position: relative;
    overflow-x: hidden;
}

#main-list-header-right{
    z-index: -1 !important;
}
#main-list-container{
    height: 100vh !important;
} 

#display-area #main-list-content{
    height: 100vh !important;
}



.moreLabelList{
    display: none;
}
 
.more{
    display: block;
}
 
.categoryList{
    display:none;
}
 
.categoryShow{
    display: block;
}

